fixed alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,7 +140,8 @@ p {
 }
 
 .adoptorflop {
-    margin: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .center {
